# pico2040-workspace

./: .gitignore  README.md
micropython-examples/: file_handler.py
sdk-examples/hello-world/: CMakeLists.txt
sdk-examples/wifi_scan/: CMakeLists.txt
sdk-examples/wifi_scan/src/: picow_wifi_scan.c
